--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
 	<main>
 		<header>
-		<img src="./img/logo.jpg">
+		<img src="https://i.imgur.com/2RjP01q.jpg">
 		<h1>@nguyenletriloc</h1>
 	</header>
 	<ul>
 		<li>
-			<a href="https://web9s.net/index.php"> <img src="./img/home.png" style="
+			<a href="https://trumsubgiare.space"> <img src="https://i.imgur.com/JYBDj6p.png" style="
     width: 30px;
     height: 30px;
     padding-bottom: 10px;"
@@ -32,7 +32,7 @@
 		</li>
 
 		<li>
-			<a href="https://www.youtube.com/channel/UCVn6KOIsjMriLq9s9Fss8zA/videos"><img src="./img/youtube.png"
+			<a href="https://www.youtube.com/channel/UCVn6KOIsjMriLq9s9Fss8zA/videos"><img src="https://i.imgur.com/BArUl4v.png"
 				style="
     width: 30px;
     height: 30px;
